2006-10-16  Stefan Kost  <ensonic@users.sf.net>

	* docs/design/part-live-source.txt:
	  describe howto handle latency
	
	* docs/random/ensonic/profiling.txt:
	  more ideas

	* tools/gst-plot-timeline.py:
	  fix log parsing for solaris, remove unused function

2006-10-16  Wim Taymans  <wim@fluendo.com>

	* docs/design/part-trickmodes.txt:
	* gst/gstevent.c:
	Update some docs regarding reverse playback.

2006-10-15  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Marcus Granado  <mrc dot gran at gmail com>

	* win32/vs8/grammar.vcproj:
	  Error out with a warning if glib-genmarshal.exe is not in path,
	  instead of creating bogus gstmarshal.[ch] files. Fixes #361720.

2006-10-13  Wim Taymans  <wim@fluendo.com>

	* gst/gstsegment.c: (gst_segment_set_seek):
	When seeking to stop -1, set last_stop (current position) to the
	duration of the segment.

2006-10-13  Wim Taymans  <wim@fluendo.com>

	* gst/gstelement.h:
	Clarify _NO_PREROLL a bit more.

	* gst/gstevent.c:
	Fix docs.

	* gst/gstpad.c: (gst_pad_link_check_hierarchy),
	(gst_pad_get_caps_unlocked), (gst_pad_save_thyself),
	(handle_pad_block), (gst_pad_push_event), (gst_pad_send_event):
	Patch by: Yves Lefebvre <ivanohe at abacom dot com> Fix possible deadlock
	due to wrong locking order. Fixes #361769.
	Remove some redundant/misplaced checks in pad_block.

	* libs/gst/base/gstbasesink.c: (gst_base_sink_get_position):
	For negative rates, count backwards from the duration.

2006-10-13  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gsterror.c: (_gst_library_errors_init):
	  Fix error message for GST_LIBRARY_ERROR_SETTINGS (feel free to come
	  up with something better).

2006-10-12  Tim-Philipp Müller  <tim at centricular dot net>

	* win32/vs6/libgstreamer.dsp:
	* win32/vs7/libgstreamer.vcproj:
	* win32/vs8/libgstreamer.vcproj:
	  Don't reference glib-compat.c which is currently not used and not
	  disted; add gstquark.c which was recently added. Fixes #361730.
