@@ -1,3 +1,9 @@
+2006-10-16  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* gst/gstelement.h:
+	  Add casts to the correct return type to state <=> state transition
+	  macros.
+
 2006-10-16  Stefan Kost  <ensonic@users.sf.net>
 
 	* docs/design/part-live-source.txt:
